--- a/public/locales/ar/menu.json
+++ b/public/locales/ar/menu.json
@@ -9,6 +9,7 @@
   "menu-elegant": "أنيق",
   "menu-refined": "مشتق",
   "menu-contemporary": "معاصر",
+  "menu-ancient": "قديمة جدا",
   "menu-men-wear": "ملابس رجالية",
   "menu-women-wear": "ملابس نسائية",
   "menu-casual-wear": "ملابس غير رسمية",
