--- a/public/locales/de/menu.json
+++ b/public/locales/de/menu.json
@@ -9,6 +9,7 @@
   "menu-elegant": "Elegant",
   "menu-refined": "Verfijnd",
   "menu-contemporary": "Hedendaags",
+  "menu-ancient": "Gammel",
   "menu-men-wear": "Herrenbekleidung",
   "menu-women-wear": "Damenbekleidung",
   "menu-casual-wear": "Freizeitkleidung",
