--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -138,6 +138,7 @@
   "text-top-products": "Top Products",
   "text-related-products": "Related Products",
   "text-new-arrivals": "New Arrivals",
+  "text-popular-products": "Popular Products",
   "text-best-sellers": "Best Sellers",
   "text-casual-wear": "Casual Wear",
   "text-items": "items",
