--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -9,6 +9,7 @@
   "menu-elegant": "Elegant",
   "menu-refined": "Refined",
   "menu-contemporary": "Contemporary",
+  "menu-ancient": "Ancient",
   "menu-men-wear": "Men Wear",
   "menu-women-wear": "Women Wear",
   "menu-casual-wear": "Casual Wear",
