--- a/public/locales/es/menu.json
+++ b/public/locales/es/menu.json
@@ -9,6 +9,7 @@
   "menu-elegant": "Elegante",
   "menu-refined": "Refinado",
   "menu-contemporary": "Contemporáneo",
+  "menu-ancient": "Antiga",
   "menu-men-wear": "Ropa de hombre",
   "menu-women-wear": "Ropa de mujer",
   "menu-casual-wear": "Ropa informal",
