--- a/public/locales/he/menu.json
+++ b/public/locales/he/menu.json
@@ -9,6 +9,7 @@
   "menu-elegant": "אֵלֶגַנטִי",
   "menu-refined": "מְזוּקָק",
   "menu-contemporary": "עַכשָׁוִי",
+  "menu-ancient": "עָתִיק",
   "menu-men-wear": "בגדי גברים",
   "menu-women-wear": "בגדי נשים",
   "menu-casual-wear": "בגדי מזדמנים",
