--- a/public/locales/zh/menu.json
+++ b/public/locales/zh/menu.json
@@ -9,6 +9,7 @@
   "menu-elegant": "優雅的",
   "menu-refined": "精製",
   "menu-contemporary": "當代的",
+  "menu-ancient": "古老的",
   "menu-men-wear": "男装",
   "menu-women-wear": "女服",
   "menu-casual-wear": "休闲装",
